# cndev

./: .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile-builder  Dockerfile-rust-updated  index.html  ssh.txt
api/: Cargo.toml
api/src/: controllers.rs  lib.rs  post_controller.rs  shencha.rs  tenant_controller.rs  user_controller.rs
api/templates/: home.html.tera  layout.html.tera  post.html.tera
api/tests/: shencha_tests.rs
doc/: history  history-cndev0.txt  history-sololo0.txt  it.txt
entity/: Cargo.toml
entity/src/: lib.rs  post.rs  tenant.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240801_000001_create_user_table.rs  m20240802_000001_create_post_table.rs  m20241101_000001_alter_post_table.rs
service/: Cargo.toml
service/src/: mutation.rs  query.rs
service/tests/: mock.rs
src/: main.rs
web/: index.html
web/cn.dev/: cndev-local.conf  cndev.conf  deploy.sh
web/cn.dev/etc/nginx/: nginx.conf
web/cn.dev/usr/share/nginx/html/: home.html  humans.txt  index.html  robots.txt  sitemaps.xml
web/cn.dev/usr/share/nginx/html/index-and-homes/root/: .html  settings.html
web/cn.dev/usr/share/nginx/html/posts/: edit.html
web/sololo.cn/: deploy.sh  sololocn-local.conf  sololocn.conf
web/sololo.cn/etc/nginx/: nginx.conf
web/sololo.cn/usr/share/nginx/html/: index.html
web/sololo.cn/usr/share/nginx/html/cndev/css/: edit-day.css  edit-night.css  home-day.css  home-night.css  home.css  index-day.css  index-m-day.css  index-m-night.css  index-night.css  post-day.css  post-night.css  settings-day.css  settings-night.css  (+1 more)
(+25 files in other folders)
