[package]
name = "cndev-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
cndev-service = { path = "../service" }
actix-files = "0.6"
actix-http = "3"
actix-rt = "2.8"
actix-service = "2"
actix-web = "4"
actix-multipart = "0.7.2"
jsonwebtoken = "9.3.0"
futures-util = "0.3.30"
tera = "1.19.0"
dotenvy = "0.15"
listenfd = "1"
serde = "1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
entity = { path = "../entity" }
migration = { path = "../migration" }
redis = { version = "0.25.3", features = ["tokio-comp"] }
alibaba-cloud-sdk-rust = "0.1.11"
rand = "0.8.5"
chrono = "0.4"
time = "0.3.36"
serde_json = "1.0.113"